--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6306,6 +6306,16 @@ repositories:
       url: https://github.com/ros-gbp/ompl-release.git
       version: 1.2.1-1
     status: maintained
+  omronsentech_camera:
+    doc:
+      type: git
+      url: https://github.com/ose-support-ros/omronsentech_camera.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ose-support-ros/omronsentech_camera.git
+      version: master
+    status: developed
   open_karto:
     doc:
       type: git
