--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2227,6 +2227,16 @@ repositories:
       url: https://github.com/ros-gbp/ompl-release.git
       version: 1.3.1-3
     status: maintained
+  omronsentech_camera:
+    doc:
+      type: git
+      url: https://github.com/ose-support-ros/omronsentech_camera.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ose-support-ros/omronsentech_camera.git
+      version: master
+    status: developed
   open_street_map:
     doc:
       type: git
