--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -17080,6 +17080,21 @@ repositories:
       url: https://github.com/openspur/yp-spur.git
       version: master
     status: developed
+  ypspur_ros:
+    doc:
+      type: git
+      url: https://github.com/openspur/ypspur_ros.git
+      version: master
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/openspur/ypspur_ros-release.git
+      version: 0.1.0-0
+    source:
+      type: git
+      url: https://github.com/openspur/ypspur_ros.git
+      version: master
+    status: developed
   yujin_maps:
     doc:
       type: git
