--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -11379,13 +11379,14 @@ repositories:
       packages:
       - turtlebot3_applications
       - turtlebot3_automatic_parking
+      - turtlebot3_automatic_parking_vision
       - turtlebot3_follow_filter
       - turtlebot3_follower
       - turtlebot3_panorama
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ROBOTIS-GIT-release/turtlebot3_applications-release.git
-      version: 0.1.0-0
+      version: 0.2.0-0
     source:
       type: git
       url: https://github.com/ROBOTIS-GIT/turtlebot3_applications.git
