Add bson for Gentoo

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -496,6 +496,7 @@ python-bs4:
 python-bson:
   debian: [python-bson]
   fedora: [python-bson]
+  gentoo: [dev-python/bson]
   osx:
     pip:
       packages: [bson]
