--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -272,6 +272,16 @@ repositories:
       url: https://github.com/AutonomyLab/ardrone_autonomy.git
       version: indigo-devel
     status: developed
+  aruco_ros:
+    doc:
+      type: git
+      url: https://github.com/pal-robotics/aruco_ros.git
+      version: kinetic-devel
+    source:
+      type: git
+      url: https://github.com/pal-robotics/aruco_ros.git
+      version: kinetic-devel
+    status: developed
   asr_approx_mvbb:
     doc:
       type: git
