aruco_ros: 0.2.3-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -277,6 +277,15 @@ repositories:
       type: git
       url: https://github.com/pal-robotics/aruco_ros.git
       version: kinetic-devel
+    release:
+      packages:
+      - aruco
+      - aruco_msgs
+      - aruco_ros
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/pal-gbp/aruco_ros-release.git
+      version: 0.2.3-0
     source:
       type: git
       url: https://github.com/pal-robotics/aruco_ros.git
