--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9472,6 +9472,13 @@ repositories:
       url: https://github.com/ros-drivers/rosserial.git
       version: jade-devel
     status: maintained
+  rostful:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/pyros-dev/rostful-rosrelease.git
+      version: 0.2.0-3
+    status: developed
   rostune:
     release:
       tags:
