--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -1138,7 +1138,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/ros_comm.git
-      version: lunar-devel
+      version: melodic-devel
     release:
       packages:
       - message_filters
@@ -1170,7 +1170,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/ros_comm.git
-      version: lunar-devel
+      version: melodic-devel
     status: maintained
   ros_comm_msgs:
     doc:
