--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6495,6 +6495,22 @@ repositories:
       url: https://github.com/ros-drivers/openni_camera.git
       version: indigo-devel
     status: maintained
+  openrave_planning:
+    doc:
+      type: git
+      url: https://github.com/jsk-ros-pkg/openrave_planning.git
+      version: master
+    release:
+      packages:
+      - arm_navigation_msgs
+      - collada_robots
+      - openrave
+      - openrave_planning
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/tork-a/openrave_planning-release.git
+      version: 0.0.6-0
+    status: developed
   openrtm_aist:
     doc:
       type: git
