web_interface: 1.0.7-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -12479,6 +12479,31 @@ repositories:
       url: https://github.com/jihoonl/waypoint.git
       version: master
     status: developed
+  web_interface:
+    doc:
+      type: git
+      url: https://github.com/UNR-RoboticsResearchLab/web_interface.git
+      version: indigo-devel
+    release:
+      packages:
+      - image_stream
+      - launchman
+      - pyclearsilver
+      - ros_apache2
+      - rosjson
+      - rosweb
+      - web_interface
+      - web_msgs
+      - webui
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/UNR-RoboticsResearchLab/web_interface-release.git
+      version: 1.0.7-0
+    source:
+      type: git
+      url: https://github.com/UNR-RoboticsResearchLab/web_interface.git
+      version: indigo-devel
+    status: maintained
   web_video_server:
     doc:
       type: git
