rc_visard: 2.1.0-0 in 'melodic/distribution.yaml' [bloom]

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -1039,6 +1039,26 @@ repositories:
       url: https://github.com/roboception/rc_genicam_api.git
       version: master
     status: developed
+  rc_visard:
+    doc:
+      type: git
+      url: https://github.com/roboception/rc_visard_ros.git
+      version: master
+    release:
+      packages:
+      - rc_visard
+      - rc_visard_description
+      - rc_visard_driver
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/roboception/rc_visard-release.git
+      version: 2.1.0-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/roboception/rc_visard_ros.git
+      version: master
+    status: developed
   realtime_tools:
     doc:
       type: git
