Adding my_repo_name to documentation index for distro

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -5889,6 +5889,14 @@ repositories:
       url: https://github.com/mrpt-ros-pkg/kinect_2d_scanner.git
       version: master
     status: maintained
+  kinect_autonomy:
+    doc:
+        type: python
+        url: https://github.com/GunnerPatterson/ROS-Kinect-Autonomy
+        version: indigo
+        depends:
+        -openni
+        -openni_tracker
   kinect_aux:
     doc:
       type: git
