--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2232,6 +2232,11 @@ repositories:
       type: git
       url: https://github.com/ose-support-ros/omronsentech_camera.git
       version: master
+    source:
+      test_commits: false
+      type: git
+      url: https://github.com/ose-support-ros/omronsentech_camera.git
+      version: master
     status: developed
   open_street_map:
     doc:
