Fix python-bson to pull pymongo in Gentoo
Apparently for the other distros the bson part has been generated into a different package.

And the library that says it stripped from pymongo bson and made a package itself is not compatible
with those neither the code that uses it.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -496,7 +496,7 @@ python-bs4:
 python-bson:
   debian: [python-bson]
   fedora: [python-bson]
-  gentoo: [dev-python/bson]
+  gentoo: [dev-python/pymongo]
   osx:
     pip:
       packages: [bson]
