--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6383,6 +6383,7 @@ repositories:
       url: https://github.com/ose-support-ros/omronsentech_camera.git
       version: master
     source:
+      test_commits: false
       type: git
       url: https://github.com/ose-support-ros/omronsentech_camera.git
       version: master
