--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2233,6 +2233,7 @@ repositories:
       url: https://github.com/ose-support-ros/omronsentech_camera.git
       version: master
     source:
+      test_commits: false
       type: git
       url: https://github.com/ose-support-ros/omronsentech_camera.git
       version: master
