--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -1758,7 +1758,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-planning/srdfdom.git
-      version: kinetic-devel
+      version: melodic-devel
     release:
       tags:
         release: release/melodic/{package}/{version}
@@ -1767,7 +1767,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-planning/srdfdom.git
-      version: kinetic-devel
+      version: melodic-devel
     status: maintained
   std_msgs:
     doc:
