--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -1758,16 +1758,16 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-planning/srdfdom.git
-      version: kinetic-devel
+      version: melodic-devel
     release:
       tags:
         release: release/melodic/{package}/{version}
       url: https://github.com/ros-gbp/srdfdom-release.git
-      version: 0.4.2-0
+      version: 0.5.0-0
     source:
       type: git
       url: https://github.com/ros-planning/srdfdom.git
-      version: kinetic-devel
+      version: melodic-devel
     status: maintained
   std_msgs:
     doc:
