--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -745,6 +745,40 @@ repositories:
       url: https://github.com/orbbec/ros_astra_launch.git
       version: master
     status: developed
+  astuff_pacmod:
+    doc:
+      depends:
+      - astuff_sensor_msgs
+      type: git
+      url: https://github.com/astuff/ros_pacmod.git
+      version: release
+    source:
+      type: git
+      url: https://github.com/astuff/ros_pacmod.git
+      version: release
+    status: maintained
+  astuff_pacmod_game_control:
+    doc:
+      depends:
+      - astuff_sensor_msgs
+      type: git
+      url: https://github.com/astuff/pacmod_game_control.git
+      version: release
+    source:
+      type: git
+      url: https://github.com/astuff/pacmod_game_control.git
+      version: release
+    status: developed
+  astuff_sensor_msgs:
+    doc:
+      type: git
+      url: https://github.com/astuff/astuff_sensor_msgs.git
+      version: release
+    source:
+      type: git
+      url: https://github.com/astuff/astuff_sensor_msgs.git
+      version: release
+    status: developed
   async_web_server_cpp:
     doc:
       type: git
@@ -6096,6 +6130,16 @@ repositories:
       type: git
       url: https://github.com/uos/kurt_navigation.git
       version: indigo
+  kvaser_interface:
+    doc:
+      type: git
+      url: https://github.com/astuff/kvaser_interface.git
+      version: release
+    source:
+      type: git
+      url: https://github.com/astuff/kvaser_interface.git
+      version: release
+    status: maintained
   lama:
     doc:
       type: git
@@ -8105,6 +8149,16 @@ repositories:
       url: https://github.com/UTNuclearRoboticsPublic/netft_utils.git
       version: master
     status: maintained
+  network_interface:
+    doc:
+      type: git
+      url: https://github.com/astuff/network_interface.git
+      version: release
+    source:
+      type: git
+      url: https://github.com/astuff/network_interface.git
+      version: release
+    status: maintained
   nmea_comms:
     doc:
       type: git
@@ -9365,6 +9419,16 @@ repositories:
       url: https://github.com/amineHorseman/pioneer_teleop.git
       version: master
     status: maintained
+  platform_automation_msgs:
+    doc:
+      type: git
+      url: https://github.com/astuff/platform_automation_msgs.git
+      version: release
+    source:
+      type: git
+      url: https://github.com/astuff/platform_automation_msgs.git
+      version: release
+    status: developed
   play_motion:
     doc:
       type: git
