Adding astuff_pacmod, astuff_pacmod_game_control, astuff_sensor_msgs, kvaser_interface, network_interface, and platform_automation_msgs to index for Kinetic.

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -506,6 +506,40 @@ repositories:
       url: https://github.com/orbbec/ros_astra_launch.git
       version: master
     status: developed
+  astuff_pacmod:
+    doc:
+      depends:
+      - astuff_sensor_msgs
+      type: git
+      url: https://github.com/astuff/ros_pacmod.git
+      version: release
+    source:
+      type: git
+      url: https://github.com/astuff/ros_pacmod.git
+      version: release
+    status: maintained
+  astuff_pacmod_game_control:
+    doc:
+      depends:
+      - astuff_sensor_msgs
+      type: git
+      url: https://github.com/astuff/pacmod_game_control.git
+      version: release
+    source:
+      type: git
+      url: https://github.com/astuff/pacmod_game_control.git
+      version: release
+    status: developed
+  astuff_sensor_msgs:
+    doc:
+      type: git
+      url: https://github.com/astuff/astuff_sensor_msgs.git
+      version: release
+    source:
+      type: git
+      url: https://github.com/astuff/astuff_sensor_msgs.git
+      version: release
+    status: developed
   async_web_server_cpp:
     release:
       tags:
@@ -4375,6 +4409,16 @@ repositories:
       url: https://github.com/ros-industrial/kuka_experimental.git
       version: indigo-devel
     status: developed
+  kvaser_interface:
+    doc:
+      type: git
+      url: https://github.com/astuff/kvaser_interface.git
+      version: release
+    source:
+      type: git
+      url: https://github.com/astuff/kvaser_interface.git
+      version: release
+    status: maintained
   kvh_drivers:
     doc:
       type: git
@@ -5993,6 +6037,16 @@ repositories:
       url: https://github.com/UTNuclearRoboticsPublic/netft_utils.git
       version: master
     status: maintained
+  network_interface:
+    doc:
+      type: git
+      url: https://github.com/astuff/network_interface.git
+      version: release
+    source:
+      type: git
+      url: https://github.com/astuff/network_interface.git
+      version: release
+    status: maintained
   nmea_comms:
     doc:
       type: git
@@ -6972,6 +7026,16 @@ repositories:
       url: https://github.com/amineHorseman/pioneer_teleop.git
       version: master
     status: maintained
+  platform_automation_msgs:
+    doc:
+      type: git
+      url: https://github.com/astuff/platform_automation_msgs.git
+      version: release
+    source:
+      type: git
+      url: https://github.com/astuff/platform_automation_msgs.git
+      version: release
+    status: developed
   plotjuggler:
     doc:
       type: git
