--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3680,18 +3680,19 @@ python-twisted-bin:
   arch: [python2-twisted]
   debian: [python-twisted-bin]
   fedora: [python-twisted-core]
+  gentoo: [dev-python/twisted]
   ubuntu: [python-twisted-bin]
 python-twisted-core:
   arch: [python2-twisted]
   debian: [python-twisted-core]
   fedora: [python-twisted-core]
-  gentoo: [dev-python/twisted-core]
+  gentoo: [dev-python/twisted]
   ubuntu: [python-twisted-core]
 python-twisted-web:
   arch: [python2-twisted]
   debian: [python-twisted-web]
   fedora: [python-twisted-web]
-  gentoo: [dev-python/twisted-web]
+  gentoo: [dev-python/twisted]
   ubuntu: [python-twisted-web]
 python-twitter:
   debian:
