--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -774,6 +774,20 @@ repositories:
       type: git
       url: https://github.com/astuff/astuff_sensor_msgs.git
       version: release
+    release:
+      packages:
+      - astuff_sensor_msgs
+      - delphi_esr_msgs
+      - delphi_srr_msgs
+      - ibeo_msgs
+      - kartech_linear_actuator_msgs
+      - mobileye_560_660_msgs
+      - neobotix_usboard_msgs
+      - pacmod_msgs
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/astuff/astuff_sensor_msgs-release.git
+      version: 2.0.1-0
     source:
       type: git
       url: https://github.com/astuff/astuff_sensor_msgs.git
