--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -8183,6 +8183,11 @@ repositories:
       type: git
       url: https://github.com/astuff/network_interface.git
       version: release
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/astuff/network_interface-release.git
+      version: 2.0.0-0
     source:
       type: git
       url: https://github.com/astuff/network_interface.git
