--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6042,6 +6042,11 @@ repositories:
       type: git
       url: https://github.com/astuff/network_interface.git
       version: release
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/astuff/network_interface-release.git
+      version: 2.0.0-0
     source:
       type: git
       url: https://github.com/astuff/network_interface.git
