--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10626,6 +10626,21 @@ repositories:
       url: https://github.com/fzi-forschungszentrum-informatik/schunk_svh_driver.git
       version: master
     status: developed
+  scratch4robots:
+    doc:
+      type: git
+      url: https://github.com/JdeRobot/Scratch4Robots.git
+      version: 0.1.0
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/JdeRobot/Scratch4Robots-release.git
+      version: 0.0.1-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/JdeRobot/Scratch4Robots.git
+      version: 0.1.0
   segway_rmp:
     doc:
       type: git
