--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10630,17 +10630,16 @@ repositories:
     doc:
       type: git
       url: https://github.com/JdeRobot/Scratch4Robots.git
-      version: 0.0.1
+      version: master
     release:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/JdeRobot/Scratch4Robots-release.git
       version: 0.0.1-0
     source:
-      test_pull_requests: true
       type: git
       url: https://github.com/JdeRobot/Scratch4Robots.git
-      version: 0.0.1
+      version: master
   segway_rmp:
     doc:
       type: git
