--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -752,6 +752,13 @@ repositories:
       type: git
       url: https://github.com/astuff/ros_pacmod.git
       version: release
+    release:
+      packages:
+      - pacmod
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/astuff/ros_pacmod-release.git
+      version: 2.0.2-0
     source:
       type: git
       url: https://github.com/astuff/ros_pacmod.git
