--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -764,6 +764,13 @@ repositories:
       type: git
       url: https://github.com/astuff/pacmod_game_control.git
       version: release
+    release:
+      packages:
+      - pacmod_game_control
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/astuff/pacmod_game_control-release.git
+      version: 2.0.0-0
     source:
       type: git
       url: https://github.com/astuff/pacmod_game_control.git
