Changing pacmod and pacmod_game_control package names in Kinetic.

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -506,30 +506,6 @@ repositories:
       url: https://github.com/orbbec/ros_astra_launch.git
       version: master
     status: developed
-  astuff_pacmod:
-    doc:
-      depends:
-      - astuff_sensor_msgs
-      type: git
-      url: https://github.com/astuff/ros_pacmod.git
-      version: release
-    source:
-      type: git
-      url: https://github.com/astuff/ros_pacmod.git
-      version: release
-    status: maintained
-  astuff_pacmod_game_control:
-    doc:
-      depends:
-      - astuff_sensor_msgs
-      type: git
-      url: https://github.com/astuff/pacmod_game_control.git
-      version: release
-    source:
-      type: git
-      url: https://github.com/astuff/pacmod_game_control.git
-      version: release
-    status: developed
   astuff_sensor_msgs:
     doc:
       type: git
@@ -6729,6 +6705,30 @@ repositories:
       type: git
       url: https://github.com/ros-industrial-consortium/packml.git
       version: kinetic-devel
+    status: developed
+  pacmod:
+    doc:
+      depends:
+      - astuff_sensor_msgs
+      type: git
+      url: https://github.com/astuff/pacmod.git
+      version: release
+    source:
+      type: git
+      url: https://github.com/astuff/pacmod.git
+      version: release
+    status: maintained
+  pacmod_game_control:
+    doc:
+      depends:
+      - astuff_sensor_msgs
+      type: git
+      url: https://github.com/astuff/pacmod_game_control.git
+      version: release
+    source:
+      type: git
+      url: https://github.com/astuff/pacmod_game_control.git
+      version: release
     status: developed
   parameter_pa:
     doc:
