--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6744,6 +6744,11 @@ repositories:
       type: git
       url: https://github.com/astuff/pacmod_game_control.git
       version: release
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/astuff/pacmod_game_control-release.git
+      version: 2.0.0-0
     source:
       type: git
       url: https://github.com/astuff/pacmod_game_control.git
