--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6732,6 +6732,11 @@ repositories:
       type: git
       url: https://github.com/astuff/pacmod.git
       version: release
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/astuff/pacmod-release.git
+      version: 2.0.2-0
     source:
       type: git
       url: https://github.com/astuff/pacmod.git
