--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8238,6 +8238,7 @@ repositories:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/clearpath-gbp/ridgeback_simulator-release.git
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ridgeback/ridgeback_simulator.git
