--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7336,8 +7336,8 @@ repositories:
   pr2_navigation:
     doc:
       type: git
-      url: https://github.com/pr2/pr2_navigation.git
-      version: hydro-devel
+      url: https://github.com/PR2-prime/pr2_navigation.git
+      version: kinetic-devel
     release:
       packages:
       - laser_tilt_controller_filter
@@ -7353,12 +7353,12 @@ repositories:
       - semantic_point_annotator
       tags:
         release: release/kinetic/{package}/{version}
-      url: https://github.com/pr2-gbp/pr2_navigation-release.git
+      url: https://github.com/PR2-prime/pr2_navigation-release.git
       version: 0.1.28-0
     source:
       type: git
-      url: https://github.com/pr2/pr2_navigation.git
-      version: hydro-devel
+      url: https://github.com/PR2-prime/pr2_navigation.git
+      version: kinetic-devel
     status: unmaintained
   pr2_power_drivers:
     doc:
