--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -1256,6 +1256,25 @@ repositories:
       type: git
       url: https://github.com/ros-controls/ros_controllers.git
       version: melodic-devel
+    release:
+      packages:
+      - diff_drive_controller
+      - effort_controllers
+      - force_torque_sensor_controller
+      - forward_command_controller
+      - four_wheel_steering_controller
+      - gripper_action_controller
+      - imu_sensor_controller
+      - joint_state_controller
+      - joint_trajectory_controller
+      - position_controllers
+      - ros_controllers
+      - rqt_joint_trajectory_controller
+      - velocity_controllers
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/ros_controllers-release.git
+      version: 0.14.0-0
     source:
       type: git
       url: https://github.com/ros-controls/ros_controllers.git
