iliad_smp: 0.1.0-0 in 'kinetic/lcas-dist.yaml' [bloom]

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -90,10 +90,12 @@ repositories:
     status: developed
   iliad_smp:
     release:
+      packages:
+      - iliad_smp_global_planner
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/LCAS/restricted-releases.git
-      version: 0.0.1-0
+      version: 0.1.0-0
     source:
       test_pull_requests: true
       type: git
