--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -569,6 +569,12 @@ repositories:
       url: https://github.com/autowarefoundation/autoware_lanelet2_extension.git
       version: main
     status: developed
+  autoware_msgs:
+    source:
+      type: git
+      url: https://github.com/autowarefoundation/autoware_msgs.git
+      version: rolling
+    status: developed
   autoware_utils:
     release:
       tags:
