Add python3-pillow-tk in rosdep/python.yaml for RHEL.
Co-authored-by: Scott K Logan <logans@cottsay.net>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7609,6 +7609,7 @@ python3-pil:
 python3-pil-imagetk:
   debian: [python3-pil.imagetk]
   fedora: [python3-pillow-tk]
+  rhel: [python3-pillow-tk]
   ubuntu: [python3-pil.imagetk]
 python3-pip:
   alpine: [py3-pip]
